--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A fucking framework to comply to the EU cookie law",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -13,5 +14,12 @@
     "law"
   ],
   "author": "Roberto Ciano <roberto@second-page.de>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^2.4.1"
+  }
 }
